--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -77,7 +78,10 @@
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html"
-            ><img class="logo" src="./imagenes//oveja/OvejaVerde-01-fondo.jpg" alt=""
+            ><img
+              class="logo"
+              src="./imagenes//oveja/OvejaVerde-01-fondo.jpg"
+              alt=""
           /></a>
           <button
             class="navbar-toggler"
@@ -93,7 +97,12 @@
           <div class="collapse navbar-collapse" id="navbarScroll">
             <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="./index.html"
+                  >Inicio</a
+                >
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/pages/form.html">Contacto</a>
@@ -113,8 +122,16 @@
                   class="dropdown-menu"
                   aria-labelledby="navbarScrollingDropdown"
                 >
-                  <li><a class="dropdown-item" href="/pages/fertilizantes.html">Fertilizantes</a></li>
-                  <li><a class="dropdown-item" href="/pages/sustratos.html">Sustratos</a></li>
+                  <li>
+                    <a class="dropdown-item" href="/pages/fertilizantes.html"
+                      >Fertilizantes</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="/pages/sustratos.html"
+                      >Sustratos</a
+                    >
+                  </li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
@@ -133,14 +150,24 @@
                   aria-labelledby="navbarScrollingDropdown"
                 >
                   <li>
-                    <a class="dropdown-item" href="/pages/vegetacion.html">Vegetacion</a>
+                    <a class="dropdown-item" href="/pages/vegetacion.html"
+                      >Vegetacion</a
+                    >
                   </li>
                   <li>
-                    <a class="dropdown-item" href="/pages/floracion.html">Floracion</a>
-                  </li><li>
-                    <a class="dropdown-item" href="/pages/glosario.html">Glosario</a>
-                  </li><li>
-                    <a class="dropdown-item" href="/pages/plagas.html">Plagas</a>
+                    <a class="dropdown-item" href="/pages/floracion.html"
+                      >Floracion</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="/pages/glosario.html"
+                      >Glosario</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="/pages/plagas.html"
+                      >Plagas</a
+                    >
                   </li>
                 </ul>
               </li>
