--- a/pages/form.html
+++ b/pages/form.html
@@ -151,7 +151,7 @@
   <main class="principal">
     <form class="row g-3">
       <div class="col-md-6">
-        <label for="inputEmail4" class="form-label">Mail</label>
+        <label for="inputEmail4" class="form-label">Usuario</label>
         <input type="email" class="form-control" id="inputEmail4">
       </div>
       <div class="col-md-6">
