--- a/pages/glosario.html
+++ b/pages/glosario.html
@@ -152,8 +152,8 @@
     <h3 class="text-center text-md-start">
       Glosario Cannabico
     </h3>
-    <div class="glosario-indice">
-      <ul class="list-group-glosario list-group">
+    <div class="glosario-indice text-center text-md-start">
+      <ul class="list-group text-center">
         <li class="list-group-item"><a href="#glosario-a">A</a></li>
         <li class="list-group-item"><a href="#glosario-b">B</a></li>
         <li class="list-group-item"><a href="#glosario-c">C</a></li>
